--- a/HW-3/style.css
+++ b/HW-3/style.css
@@ -64,3 +64,18 @@ button {
 button:hover {
     background-color: #45a049;
 }
+body {
+    font-family: 'Roboto', sans-serif; 
+    background-color: #f5f5f5;
+    color: #333;
+}
+
+h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700; 
+}
+
+button {
+    font-family: 'Roboto', sans-serif; 
+}
+
